@@ -16,7 +16,6 @@
 
 package org.springframework.cloud.kubernetes.commons.config;
 
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -28,7 +27,7 @@ import java.util.Map;
 public record SourceData(String sourceName, Map<String, Object> sourceData) {
 
 	public static SourceData emptyRecord(String sourceName) {
-		return new SourceData(sourceName, Collections.emptyMap());
+		return new SourceData(sourceName, Map.of());
 	}
 
 }
